--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,26 @@
 <resources>
-  <string name="app_name">Stock Hawk</string>
+    <string name="app_name">Stock Hawk</string>
 
-  <string name="action_example">Example action</string>
+    <string name="action_example">Example action</string>
+    <string name="action_settings">Settings</string>
+    <string name="action_change_units">Change Units</string>
+    <string name="symbol_search">Symbol Search</string>
+    <string name="content_test">Search for a Stock Symbol</string>
+    <string name="input_hint">FB</string>
+    <string name="input_prefill"></string>
+    <string name="extra_symbol_tag">es_tag</string>
+    <string name="network_toast">Uh-oh! This app requires an internet connection</string>
 
-  <string name="action_settings">Settings</string>
-  <string name="action_change_units">Change Units</string>
-  <string name="symbol_search">Symbol Search</string>
-  <string name="content_test">Search for a Stock Symbol</string>
-  <string name="input_hint">FB</string>
-  <string name="input_prefill"></string>
-  <string name="network_toast">Uh-oh! This app requires an internet connection</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="symbol_not_found_msg">Symbol cannot find!</string>
+    <string name="symbol_out_of_date_msg">Newest data is empty! Please refresh.</string>
+    <string name="empty_stock_list">No Any Stock Data!</string>
+    <string name="title_widget_detail">Stock Widget</string>
+    <string name="up_description">Up</string>
+    <string name="down_description">Down</string>
+    <string name="chart_description">Stock Chart</string>
+    <string name="msg_symbol_exists">This stock is already saved!</string>
+    <string name="action_add_symbol">Add Symbol</string>
+    <string name="action_refresh">Refresh</string>
+
 </resources>
